2002-04-05  Krzysztof Zaraska  <kzaraska@student.uci.agh.edu.pl>

	* src/lml-alert.c: include <inttypes.h> and <sys/types.h>
	(FreeBSD compat. fix)

2002-04-04  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/file-server.c (file_server_wake_up): 
	use buffered IO.

	* plugins/simple/simple.c: 
	(store_runtime_variable): new function, keep pointer
	to string that use backward reference.

	(simple_run): call resolve_variable and free_variable_allocated_data().

	(free_variable_allocated_data): 
	new function.
	
	(resolve_variable): new function. Use backward reference
	associated with the matched regex to resolve variable.

	(replace_str): replace a given variable in a string.

	The Simple plugin now support backward reference in IDMEF field setting. 
	This mean you can have dynamic text in IDMEF field. 

2002-04-03  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* plugins/simple/simple.c (filter_string): 
	use strchr, not strchrr, to search key - value
	delimiter. 

	* src/udp-server.c (udp_server_standalone): 
	save the set and restore it when select() return.

2002-04-02  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/log-common.c (format_syslog_header): 
	new function, parse the syslog header. 

	* src/lml-alert.c (generate_target): 
	new function, take care of including target_program and
	target_hostname in the IDMEF alert.
	(lml_emit_alert): call generate_target().

	* src/file-server.c (file_server_wake_up): 
	set backslash 0 at the end of the buffer.

	* src/pconfig.c (set_file): now that we do not
	rely on server logic to add file monitor, we can add
	monitor from the option callback.

	* src/udp-server.c: make the size of our buffer 
	compliant with what is specified in RFC 3164 (1024
	bytes max per syslog messages).

	* plugins.rules.in: comment the Debug plugin entry 
	by default.

2002-03-29  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/file-server.c (file_server_monitor_file): 
	set current mtime.
