@@ -1,3 +1,10 @@
+2002-04-08  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
+
+	* Makefile.am (install-data-local): 
+        Only install default configuration file if it does not
+        exit... If a configuration file is already present, warn
+        the user and install in prelude-lml.conf-dist.
+
 2002-04-05  Krzysztof Zaraska  <kzaraska@student.uci.agh.edu.pl>
 
 	* src/lml-alert.c: include <inttypes.h> and <sys/types.h>
